Fix buffer swap prototypes

BUG: 309647
REVIEW: 107302